--- a/src/css/main.css
+++ b/src/css/main.css
@@ -117,6 +117,7 @@ body{
     cursor: pointer;
 } /*чекс */
 
+/*чекс*/
 .layer-4, .layer-5, .layer-6 {
     pointer-events: none; /*Если слои мешают работе кнопки, то мы можем так убрать проблему,
      в кнопке обязательно добавить свойство cursor: pointer*/
